--- a/.env.test
+++ b/.env.test
@@ -1,7 +1,8 @@
-DB_USER=postgres
-DB_PASS=postgres
-DB_HOST=localhost
-DB_NAME=gamedev_test
-DB_PORT=5432
+POSTGRES_DB=gamedev_test
+POSTGRES_PASSWORD=postgres
+POSTGRES_HOST=localhost
+POSTGRES_USER=postgres
+POSTGRES_PORT=5432
 SSLMODE=disable
 PORT=8080
+
